Prepare for being part of ports tree

--- a/make.conf
+++ b/make.conf
@@ -1,6 +1,8 @@
 PKGNAME = HTMLPP
-PKGVERSION = 0.7
-basedir = http://localhost/tools
+PKG_MAJOR_VERSION = 0.7
+PKG_MINOR_VERSION = x
+PKGVERSION = ${PKG_MAJOR_VERSION}.${PKG_MINOR_VERSION}
+basedir = /usr/local/tools
 pkgprefix = ${PKGNAME}/${PKGVERSION}
 pkglibdir = ${basedir}/${pkgprefix}
 pkglibexecdir = ${basedir}/${pkgprefix}
