--- a/make.conf
+++ b/make.conf
@@ -1,7 +1,9 @@
 PKGNAME = HTMLPP
-PKG_MAJOR_VERSION = 0.7
+PKG_MAJOR_VERSION = 0.8
 PKG_MINOR_VERSION = x
 PKGVERSION = ${PKG_MAJOR_VERSION}.${PKG_MINOR_VERSION}
+
+# paths
 basedir = /usr/local/tools
 pkgprefix = ${PKGNAME}/${PKGVERSION}
 pkglibdir = ${basedir}/${pkgprefix}
@@ -9,3 +11,7 @@ pkglibexecdir = ${basedir}/${pkgprefix}
 pkgdemodir = ${basedir}/${pkgprefix}/demos
 pkgdocdir = ${basedir}/${pkgprefix}/doc
 
+# tools
+URL_UTILS_VERSION = 0.6.2
+INSTALL = ${toolsdir}/URL-Utils-${URL_UTILS_VERSION}/url-install ${INSTALL_OPTIO
+NS}
