broken make.conf

--- a/make.conf
+++ b/make.conf
@@ -12,6 +12,7 @@ pkgdemodir = ${basedir}/${pkgprefix}/demos
 pkgdocdir = ${basedir}/${pkgprefix}/doc
 
 # tools
+toolsdir = /usr/local/tools
 URL_UTILS_VERSION = 0.6.2
-INSTALL = ${toolsdir}/URL-Utils-${URL_UTILS_VERSION}/url-install ${INSTALL_OPTIO
-NS}
+INSTALL = ${toolsdir}/URL-Utils-${URL_UTILS_VERSION}/url-install ${INSTALL_OPTIONS} 
+
