Add a test page

--- a/make.conf
+++ b/make.conf
@@ -10,6 +10,7 @@ pkglibdir = ${basedir}/${pkgprefix}
 pkglibexecdir = ${basedir}/${pkgprefix}
 pkgdemodir = ${basedir}/${pkgprefix}/demos
 pkgdocdir = ${basedir}/${pkgprefix}/doc
+pkgtestdir = ${basedir}/${pkgprefix}/test
 
 # tools
 toolsdir = /usr/local/tools
